Throw type errors when attempting to mutate read-only sequence properties

Calling for example Qt.application.arguments.push("...") should throw an
exception.

Task-number: QTBUG-67774
Change-Id: Ifd5cd3357dde510cca77b9b32c9f55f8f72837ff
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>